changed library for encode/decode